more spacing fix

--- a/script/styles.css
+++ b/script/styles.css
@@ -172,7 +172,7 @@
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(4,1fr);
     column-gap: 2.5vw;
-    row-gap:0.5aavh;
+    row-gap:0.5vh;
 }
 
 .textBlockB {
@@ -198,5 +198,11 @@
 #mContent {
     display:grid;
     grid-template-rows: repeat(4, auto);
+    gap: 1vh;
+}
+
+#resContent {
+    display:grid;
+    grid-template-rows: repeat(3, auto);
     gap: 1vh;
 }
